
syntax = "proto3";
package greet;

option go_package= "github.com/hiiamtrong/go-grpc-example/greet/proto";



message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string result = 1;
}
service GreetService {
    rpc SayHello(GreetRequest) returns (GreetResponse);
    rpc SayManyTimes(GreetRequest) returns   ( stream GreetResponse);

    rpc SayLongTime( stream GreetRequest) returns ( GreetResponse);
}


